# uemacs.rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.txt  README  README.md
.claude/: settings.local.json
c-reference/: ansi.c
src/: buffer.rs  command.rs  config.rs  display.rs  editor.rs  error.rs  input.rs  line.rs  macro_store.rs  main.rs  terminal.rs  window.rs
src/command/: case.rs  editing.rs  files.rs  macros.rs  mark.rs  misc.rs  mod.rs  navigation.rs  search.rs  windows.rs
src/syntax/: language.rs  manager.rs  mod.rs  rules.rs  style.rs  tokens.rs
src/syntax/builtin/: c.rs  markdown.rs  mod.rs  python.rs  rust.rs  toml_lang.rs
