[package]
name = "uemacs"
version = "0.4.0"
edition = "2021"
authors = ["Ali Raheem"]
description = "uEmacs/PK text editor ported to Rust"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/ali-raheem/uemacs.rs"
homepage = "https://crates.io/crates/uemacs"
keywords = ["emacs", "editor", "terminal", "cli", "text-editor"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
crossterm = "0.27"
unicode-width = "0.1"
thiserror = "1.0"
regex = "1.10"
toml = "0.8"